Fixes #16781: Make some changes to facilitate the integration of plugins

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/index.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/index.html
@@ -19,6 +19,7 @@
           <img src="/images/login/logo-rudder.svg" data-lift="with-cached-resource" alt="Rudder"></img>
           <span>${rudder-major-version}</span>
           </p>
+          <div class="plugin-info"></div>
           <div class="col-xs-12">
             <h4 class="welcome col-xs-12">Welcome, please sign in:</h4>
             <div class="form-group group-user has-feedback col-xs-12">
