Fixes #16897: Not all tags have the same appearance

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/secure/configurationManager/directiveManagement.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/secure/configurationManager/directiveManagement.html
@@ -99,7 +99,8 @@
                 </div>
                 <div class="tags-container" ng-show="tags.length>0">
                   <div class="btn-group btn-group-xs" role="group"  ng-repeat="tag in tags track by $index">
-                    <button class="btn btn-default tag" ng-class="{'onlyKey':only.key, 'onlyValue':only.value, 'already-exist':tag.alreadyExist}" ng-click="modifyTag(tag, 'directiveFilterKeyInput', 'directiveFilterValueInput')" >
+                    <button class="btn btn-default tags-label" ng-class="{'onlyKey':only.key, 'onlyValue':only.value, 'already-exist':tag.alreadyExist}" ng-click="modifyTag(tag, 'directiveFilterKeyInput', 'directiveFilterValueInput')" >
+                      <i class="fa fa-tag"></i>
                       <span class="tag-key">
                         <span ng-show="tag.key!=''">{{tag.key}}</span>
                         <i class='fa fa-asterisk' aria-hidden='true' ng-show="tag.key==''"></i>
