Fixes #17070: Display a warning in place of login form if no user are defined

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/index.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/index.html
@@ -12,118 +12,122 @@
     <link href="/images/rudder-favicon.ico" data-lift="with-cached-resource" rel="icon" type="image/x-icon" ></link>
     <script type="text/javascript" data-lift="with-cached-resource" src="/javascript/jquery/jquery-3.1.0.min.js"></script>
 </head>
-<body data-lift="Login.display" id="login-page">
-    <form class="rudder-form" name="contact" id="contact" method="post" action="/j_spring_security_check">
-      <fieldset>
-          <p class="legend col-xs-12">
-          <img src="/images/login/logo-rudder.svg" data-lift="with-cached-resource" alt="Rudder"></img>
-          <span>${rudder-major-version}</span>
-          </p>
-          <div class="plugin-info"></div>
-          <div class="col-xs-12">
-            <h4 class="welcome col-xs-12">Welcome, please sign in:</h4>
-            <div class="form-group group-user has-feedback col-xs-12">
-              <label class="sr-only" for="username">Username</label>
-              <div class="input-group">
-                <label class="input-group-addon" for="username"><span class="ion ion-android-person"></span></label>
-                <input type="text" class="form-control" id="username" name="username" placeholder="Username" size="30"></input>
-                <span class="glyphicon glyphicon-remove form-control-feedback" aria-hidden="true" aria-describedby="inputError2Status"></span>
-              </div>
-                <span id="inputErrorStatus" class="sr-only">The field is required</span>
-                <span id="helpBlock" class="help-block">This field is required.</span>
+<body id="login-page">
+  <div id="formbox">
+  <fieldset>
+    <p class="legend col-xs-12">
+      <img src="/images/login/logo-rudder.svg" data-lift="with-cached-resource" alt="Rudder"></img>
+      <span>${rudder-major-version}</span>
+    </p>
+    <div class="plugin-info"></div>
+    <div class="col-xs-12">
+      <div data-lift="Login.display">
+        <form class="rudder-form" name="contact" id="contact" method="post" action="/j_spring_security_check">
+          <h4 class="welcome col-xs-12">Welcome, please sign in:</h4>
+          <div class="form-group group-user has-feedback col-xs-12">
+            <label class="sr-only" for="username">Username</label>
+            <div class="input-group">
+              <label class="input-group-addon" for="username"><span class="ion ion-android-person"></span></label>
+              <input type="text" class="form-control" id="username" name="username" placeholder="Username" size="30"></input>
+              <span class="glyphicon glyphicon-remove form-control-feedback" aria-hidden="true" aria-describedby="inputError2Status"></span>
             </div>
-            <div class="form-group group-password has-feedback col-xs-12">
-              <label class="sr-only" for="password">Password</label>
-              <div class="input-group">
-                <label class="input-group-addon" for="password"><span class="ion ion-android-lock"></span></label>
-                <input type="password" class="form-control" id="password" name="password" placeholder="Password"></input>
-                <span class="glyphicon glyphicon-remove form-control-feedback" aria-hidden="true" aria-describedby="inputError2Status"></span>
-              </div>
-              <span id="inputError2Status" class="sr-only">The field is required</span>
-              <span id="helpBlock2" class="help-block">This field is required.</span>
+              <span id="inputErrorStatus" class="sr-only">The field is required</span>
+              <span id="helpBlock" class="help-block">This field is required.</span>
+          </div>
+          <div class="form-group group-password has-feedback col-xs-12">
+            <label class="sr-only" for="password">Password</label>
+            <div class="input-group">
+              <label class="input-group-addon" for="password"><span class="ion ion-android-lock"></span></label>
+              <input type="password" class="form-control" id="password" name="password" placeholder="Password"></input>
+              <span class="glyphicon glyphicon-remove form-control-feedback" aria-hidden="true" aria-describedby="inputError2Status"></span>
             </div>
-            <div class="form-group col-xs-12">
-              <label class="sr-only" for="valid">Sign in</label>
-              <div class="input-group col-xs-12">
-                 <span id="errorInfo" class="help-block">
-                     Login error, please try again.
-                 </span>
-                <button class="btn btn-warning-rudder col-xs-12" id="valid" name="valid" type="submit">
-                  Sign in
-                  <span class="ion ion-android-unlock"></span>
-                </button>
-              </div>
+            <span id="inputError2Status" class="sr-only">The field is required</span>
+            <span id="helpBlock2" class="help-block">This field is required.</span>
+          </div>
+          <div class="form-group col-xs-12">
+            <label class="sr-only" for="valid">Sign in</label>
+            <div class="input-group col-xs-12">
+               <span id="errorInfo" class="help-block">
+                   Login error, please try again.
+               </span>
+              <button class="btn btn-warning-rudder col-xs-12" id="valid" name="valid" type="submit">
+                Sign in
+                <span class="ion ion-android-unlock"></span>
+              </button>
             </div>
           </div>
-          <div class="form-footer col-xs-12">
-            <div class="no-padding col-xs-6">
-              <div class="col-xs-12">
-                <a href="/rudder-doc" target="_blank">
-                <span class="fa fa-book"></span>
-                  Documentation
-                </a>
-              </div>
-              <div class="col-xs-12">
-                <a href="https://www.rudder.io/en/expand/new-releases-security/" target="_blank">
-                  <span class="ion ion-chatboxes"></span>
-                  Mailing list, IRC
-                </a>
-              </div>
-            </div>
-            <div class="no-padding col-xs-6">
-              <div class="col-xs-12">
-                <a href="https://www.rudder.io/en/pricing/subscription/" target="_blank">
-                <span class="fa fa-life-ring"></span>
-                  Support
-                </a>
-              </div>
-              <div class="col-xs-12">
-                <a href="https://issues.rudder.io/" target="_blank">
-                  <span class="ion ion-bug"></span>
-                  Bug tracker
-                </a>
-              </div>
-            </div>
-          </div>
-      </fieldset>
-    </form>
-    <script type="text/javascript" data-lift="with-cached-resource" src="/javascript/login.min.js"></script>
-    <script>
-        $(document).ready(function(){
-          $('.welcome').fadeIn(1000);
-          (function(){
-              var urlVars = {};
-              var parts = window.location.href.replace(/[?&]+([^=&]+)=([^&]*)/gi, function(m,key,value) {
-                  urlVars[key] = value;
-              });
-              if(urlVars["login_error"]) {
-                  $('#errorInfo').toggleClass('has-error');
-              }
-          })();
-          $('form.rudder-form').on('submit', function(e){
-            var errors=false;
-            if($('.group-user input').val().length===0){
-              $('.group-user').addClass('has-error');
-              errors=true;
-            }else{
-              $('.group-user').removeClass('has-error');
+        </form>
+      </div>
+    </div>
+    <div class="form-footer col-xs-12">
+      <div class="no-padding col-xs-6">
+        <div class="col-xs-12">
+          <a href="/rudder-doc" target="_blank">
+          <span class="fa fa-book"></span>
+            Documentation
+          </a>
+        </div>
+        <div class="col-xs-12">
+          <a href="https://www.rudder.io/en/expand/new-releases-security/" target="_blank">
+            <span class="ion ion-chatboxes"></span>
+            Mailing list, IRC
+          </a>
+        </div>
+      </div>
+      <div class="no-padding col-xs-6">
+        <div class="col-xs-12">
+          <a href="https://www.rudder.io/en/pricing/subscription/" target="_blank">
+          <span class="fa fa-life-ring"></span>
+            Support
+          </a>
+        </div>
+        <div class="col-xs-12">
+          <a href="https://issues.rudder.io/" target="_blank">
+            <span class="ion ion-bug"></span>
+            Bug tracker
+          </a>
+        </div>
+      </div>
+    </div>
+  </fieldset>
+  </div>
+  <script type="text/javascript" data-lift="with-cached-resource" src="/javascript/login.min.js"></script>
+  <script>
+      $(document).ready(function(){
+        $('.welcome').fadeIn(1000);
+        (function(){
+            var urlVars = {};
+            var parts = window.location.href.replace(/[?&]+([^=&]+)=([^&]*)/gi, function(m,key,value) {
+                urlVars[key] = value;
+            });
+            if(urlVars["login_error"]) {
+                $('#errorInfo').toggleClass('has-error');
             }
-            if($('.group-password input').val().length===0){
-              $('.group-password').addClass('has-error');
-              errors=true;
-            }else{
-              $('.group-password').removeClass('has-error');
-            }
-            if(errors){
-              e.preventDefault();
-            }
-          });
-          $(document).keypress(function(e) {
-            if(e.which == 13) {
-              $('form.rudder-form').submit();
-            }
-          });
+        })();
+        $('form.rudder-form').on('submit', function(e){
+          var errors=false;
+          if($('.group-user input').val().length===0){
+            $('.group-user').addClass('has-error');
+            errors=true;
+          }else{
+            $('.group-user').removeClass('has-error');
+          }
+          if($('.group-password input').val().length===0){
+            $('.group-password').addClass('has-error');
+            errors=true;
+          }else{
+            $('.group-password').removeClass('has-error');
+          }
+          if(errors){
+            e.preventDefault();
+          }
         });
-    </script>
+        $(document).keypress(function(e) {
+          if(e.which == 13) {
+            $('form.rudder-form').submit();
+          }
+        });
+      });
+  </script>
 </body>
 </html>
