Fixes #17093: Add \"technical preview\" status for plugins

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/secure/plugins/pluginInformation.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/secure/plugins/pluginInformation.html
@@ -23,7 +23,8 @@
 
       <div class="lift:administration.PluginManagement.display">
         <div class="inner-portlet">
-          <h4 class="page-subtitle" data-plugin="name">[Here comes the plugins name]</h4>
+          <div data-plugin="name"></div>
+
 
           <div class="col-xs-12 callout-fade callout-info">
             <div class="marker">
